# nyc-311-bayesian-noise-models

./: .env.example  .gitignore  Makefile  README.md  helpers.py  pyproject.toml
notebooks/: 01_explore_noise_patterns.ipynb  02_fully_pooled_citywide_baseline.ipynb  02_fullypooled_citywide_baseline.ipynb  02_neighborhood_differences.ipynb  03_sharing_information_across_neighborhoods.ipynb  03_unpooled_nta_neighborhood_differences.ipynb  04_partially_pooled_nta_puma_grouped.ipynb  04_testing_predictions_on_2025.ipynb  05_testing_predictions_on_2025.ipynb  0_get_that_data.ipynb  1_basic_example.ipynb  1_explore_noise_patterns.ipynb  2_citywide_baseline.ipynb  2_neighborhood_differences.ipynb  3_neighborhood_differences.ipynb  3_sharing_information_across_neighborhoods.ipynb  4_sharing_information_across_neighborhoods.ipynb  4_testing_predictions_on_2025.ipynb  5_testing_predictions_on_2025.ipynb  helpers.py
scripts/aggregate/: build_noise_counts_with_lookup.py
scripts/ingest/: download_pumas_geojson.py
scripts/lookups/: build_puma_nta_lookup.py
